# bf-compiler

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.dev.backend  Dockerfile.dev.frontend  README.md  TODO  asdf.html  bacon.toml  docker-compose.dev.yml  nginx.conf  sonar-project.properties  test.bf
backend/: Cargo.toml  bacon.toml  test.bf  test.bf.bf
backend/src/: ast_annotation.rs  ast_runner.rs  bump_allocator.rs  codegen.rs  input_grabbing.rs  ir.rs  ir2.rs  ir2_memory_representation.rs  ir2_runner.rs  ir_runner.rs  lib.rs  parser.rs  source_annotation.rs  tokenizer.rs  type_check.rs  ucodegen.rs  util.rs  wasm_api.rs
nginx-config/: nginx.conf
src/: codegen.rs  ir.rs  ir2.rs  lib.rs  main.rs  parser.rs  source_annotation.rs  sources.rs  tokenizer.rs  type_check.rs  ucodegen.rs  wasm_api.rs
web-frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web-frontend/src/: AST-svgs.tsx  App.tsx  index.css  main.tsx
web-frontend/src/components/: ASTCard.tsx  ASTProgram.tsx  ASTProgramCard.tsx
web-frontend/src/components/ast-cards/: arrayAccessCard.ts  assignmentStatementCard.ts  blockCard.ts  blockItemCard.ts  expressionStatementCard.ts  functionCallCard.ts  functionCard.ts  functionParametersCard.ts  integerLiteralCard.ts  programCard.ts  stringLiteralCard.ts  typeCard.ts  types.ts  variableAccessCard.ts  variableDeclarationCard.ts  variableNameMappingCard.ts
web-frontend/src/pages/: SamplePage.tsx
