[package]
name = "compiler-bf-target"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] } 
logos = "0.16"
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true